--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "scripts": {
     "start": "node index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://git@github.com:burgerboydaddy/concierge.git"
+  },
   "dependencies": {
     "dotenv": "^2.0.0",
     "hapi": "^13.2.2",
