--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "async": "^2.0.0-rc.2",
     "dotenv": "^2.0.0",
     "hapi": "^13.2.2",
+    "hapi-auth-basic": "^4.1.0",
     "hapi-swagger": "^4.3.1",
     "inert": "^3.2.0",
     "joi": "^8.0.5",
