--- a/plugins/conciergeDesk/package.json
+++ b/plugins/conciergeDesk/package.json
@@ -12,8 +12,12 @@
   "main": "index",
   "dependencies": {
     "async": "^2.0.0-rc.2",
+    "bcrypt": "^0.8.5",
     "boom": "^3.1.2",
     "calibrate": "^3.0.0",
+    "hapi": "^13.3.0",
+    "hapi-auth-basic": "^4.1.0",
+    "hapi-auth-bearer-token": "^4.0.2",
     "joi": "^8.0.5",
     "mongodb": "^2.1.14",
     "mongoose": "^4.4.10"
